--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,133 @@
 .App {
   text-align: center;
 }
+h4{
+  margin-top: 3px;
+  margin-right: 7px;
+}
+.navbar-edit{
+  display: flex;
+  flex-wrap: inherit;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.img-cover{
+    background: rgba(238, 235, 235, 0.7);
+    background-size: cover;
+    background-blend-mode:darken ;
+    width: 100%;
+}
+.h1_cover {
+  Color: #0e0d0e;
+  font-family: "Great Vibes", cursive;
+  font-size: 281%;
+  line-height: 100px;
+  font-weight: normal;
+  margin-bottom: 0px;
+  text-align: center;
+  text-shadow: 0 1px 1px #fff;
+}
+.h2_cover {
+  color: #111;
+font-family: 'Open Sans Condensed', sans-serif;
+font-size: 151%;
+font-weight: 692;
+line-height: 20px;
+margin: 0 0 24px;
+padding: 0 30px;
+text-align: center;
+}
+.container1{
+  max-width: 1690px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.container{
+  max-width: 1320px;
+}
+.p-cont{
+  padding-left: 40px;
+}
+
+.header-dark{
+  padding:18px 0;
+  color:#f0f9ff;
+  background-color:#282d32;
+}
+.nav-h{
+  font-weight:bold;
+  font-size: 178%;
+  padding-top: 0%;
+  padding-bottom: 0%;
+}
+.nav-a{
+  font-weight:bold;
+  font-size:20px;
+  margin-right: 40px;
+}
+.footer-dark {
+  padding:50px 0;
+  color:#f0f9ff;
+  background-color:#282d32;
+}
+
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+.footer-dark .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
+}
+
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+}
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+  opacity:0.3;
+  font-size:13px;
+  margin-bottom:0;
+}
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +163,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.header{
+  background-color:  #cc4218;
+}
+
+
+
+
+
+
